--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@datadog/browser-rum": "^4.16.1",
         "@emotion/react": "^11",
         "@emotion/styled": "^11",
+        "@fontsource/arimo": "^4.5.9",
         "@fontsource/courier-prime": "^4.5.0",
         "@fontsource/lato": "^4.5.0",
         "@loadable/component": "^5.15.0",
