No more "v1" in api route

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
-            "@api/*": ["pages/api/v1/*"],
+            "@api/*": ["pages/api/*"],
             "@components/*": ["components/*"],
             "@providers/*": ["providers/*"],
             "@utils/*": ["utils/*"],
