--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "next": "11.1.2",
         "node-fetch": "^3.1.0",
         "node-fetch-retry": "^2.0.0",
+        "onoma": "^0.1.1",
         "quirrel": "^1.9.2",
         "raw-loader": "^4.0.2",
         "react": "17.0.2",
