--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "token-garden-service",
+    "name": "nomad-whitehat-service",
     "version": "1.0.0",
     "private": false,
     "license": "GPL-3.0-or-later",
@@ -11,6 +11,7 @@
         "format": "prettier --write \"**/*.ts\" \"**/*.tsx\""
     },
     "dependencies": {
+        "@analytics/segment": "^1.1.3",
         "@chakra-ui/icons": "^1.0.16",
         "@chakra-ui/react": "^1.6.10",
         "@datadog/browser-rum": "^4.16.1",
@@ -25,6 +26,7 @@
         "@react-three/fiber": "^7.0.25",
         "@slack/web-api": "^6.5.1",
         "@walletconnect/web3-provider": "^1.6.6",
+        "analytics": "^0.8.1",
         "axios": "^0.27.2",
         "chance": "^1.1.8",
         "crypto": "^1.0.1",
@@ -47,7 +49,6 @@
         "react-countdown": "^2.3.2",
         "react-dom": "17.0.2",
         "styled-components": "^5.3.5",
-        "three": "^0.135.0",
         "ua-parser-js": "^1.0.2",
         "urlbox": "^1.3.3",
         "wagmi": "^0.6.2",
